# clox

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  out.txt  runTests.js  runTests.mjs  test.lox
src/: assert.h  chunk.c  chunk.h  common.h  config.h.in  debug.c  debug.h  main.c  math.h  memory.c  memory.h  object.c  object.h  table.c  table.h  value.c  value.h  vm.c  vm.h
src/compiling/: compiler.c  compiler.h  scanner.c  scanner.h
tests/boolean_expressions/: args.txt  expected.txt  test.lox
tests/control_flow/: expected.txt  test.lox
tests/functions/: args.txt  expected.txt  test.lox
tests/globals/: expected.txt
tests/locals/: expected.txt  test.lox
tests/numerical_expressions/: args.txt  expected.txt  test.lox
tests/parsing/: args.txt  expected.txt
tests/scanning/: args.txt  expected.txt
tests/string_comparison/: expected.txt  test.lox
tests/strings/: expected.txt  test.lox
